# RL-Project

./: .gitignore  07_run_notes.md  08_handoff_fix_log.md  09_validation_probe_framework.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/algos/: a2c.yaml  ppo_clip.yaml  ppo_kl.yaml  trpo.yaml
configs/envs/: halfcheetah_v4.yaml  hopper_v4.yaml  pendulum_v1.yaml  walker2d_v4.yaml
docs/: 01_project_charter.md  03_experiment_protocol.md  04_algorithm_spec.md  05_build_manifest.md  06_fix_plan.md  ANALYSIS_README.md  FINAL_SUBMISSION_CHECKLIST.md  REPRODUCIBILITY.md  artifact_provenance.md  checklist.tex  final_report_draft.md  final_report_submission.html  final_report_submission.tex  neurips_2024.sty
scripts/: build_analysis.py  evaluate.py  run_main_benchmark.py  run_smoke_test.py  run_sweeps.py  run_validation_probe.py  summarize_results.py  train.py
src/: __init__.py
src/algos/: _sb3_helpers.py  a2c_runner.py  common.py  ppo_clip_runner.py  ppo_kl_runner.py  trpo_runner.py
src/analysis/: aggregate.py  bootstrap_ci.py  pipeline.py  plots.py
src/callbacks/: checkpoint_callback.py  eval_callback.py  metrics_callback.py  runtime_checks.py
src/envs/: make_env.py  normalization.py  wrappers.py
src/metrics/: collapse.py  (+2 more)
tests/: test_algorithm_fairness_and_smoke.py  test_analysis_pipeline.py  test_checkpoint_resume.py  test_config_overrides.py  test_env_shapes.py  test_eval_determinism.py  test_logging_schema.py  test_normalization.py  test_paths_and_manifests.py  test_probe_framework.py  test_runtime_and_suite_status.py
(+35 files in other folders)
